# app/models/DefaultModels/inputOutputStockModel.py
@@ -11,4 +11,5 @@ class InputOutputStock(Base):
     type = Column(String(1), index=True, nullable=False)
     qtd = Column(Float, nullable=False)
     date = Column(DateTime, nullable=False, default=datetime.now())
-    product_id = Column(Integer, ForeignKey('user_profile.id'), nullable=False)
+    product_id = Column(Integer, ForeignKey('products.id'), nullable=False)
+    user_id = Column(Integer, ForeignKey('users.id'), nullable=False)
