# app/routers/DefaultRouters/inputOutputStockRouter.py
@@ -8,10 +8,9 @@ from app.schemas.DefaultSchemas import inputOutputStockSchema
 router = APIRouter(prefix="/crud")
 
 
-@router.post("/input_output_stock/", response_model=inputOutputStockSchema.InputOutputStockCreate)
+@router.post("/input_output_stock/", response_model=inputOutputStockSchema.InputOutputStockBase)
 async def create_category(input_output_stock: inputOutputStockSchema.InputOutputStockBase, db: AsyncSession = Depends(database.get_db), validation: str = Depends(verify_token)):
     return await input_output_stock_controller.create_input_output_stock(input_output_stock=input_output_stock, db=db)
-
 
 @router.get("/input_output_stock/", response_model=list[inputOutputStockSchema.InputOutputStock])
 async def read_categories(filters: str = None, skip: int = 0, limit: int = 10,
